# pylith-skeleton

./: .gitignore  BoundaryCondition.py  DirichletBC.py  Elasticity.py  IncompressibleElasticity.py  Makefile.am  Material.py  Metadata.py  NeumannBC.py  Normalizer.py  ObserverInjector.py  Problem.py  PyLithApp.py  SimulationMetadata.py  TimeDependent.py  configure.ac  eqcycle.cfg  notes.md  pylith  pyproject.toml  quasistatic.cfg  quasistatic.ipynb  setup.cfg  setup.sh  test_skeleton.py  todo.md
docs/: pyre_python.md
etc/pylith/: convert.app.yaml  pylith.app.yaml  subfields.yaml
examples/notbook/: quasistatic.ipynb  static.ipynb  static_yaml.ipynb
examples/notebook/: static.ipynb
examples/yaml/: elasticity-axial-extension.yaml  quasistatic.yaml  static.yaml  test.yaml  test_dict.py
notes/: layout.md  mm.md  notes_2022-03-02.md  notes_2025-09-17.md  notes_2025-09-XX.md  notes_2025-10-21.md  notes_2025-10-31.md  notes_2025-11-07.md  notes_2025-11-12.md  notes_2025-11-19.md  notes_2025-11-24.md  notes_2025-11-XX.md  notes_2026-01-15.md  notes_2026-02-05.md  notes_2026-02-09.md  notes_2026-02-23.md  notes_2026-03-02.md  notes_2026-03-09.md  notes_2026-03-23.md  notes_2026-04-06.md  pylith-design.md
tests/pylith.pkg/: todo.md
tests/pylith.pkg/application_defaults/: conftest.py  test_simulation_defaults.py  test_simulation_defaults.yaml
tests/pylith.pkg/boundary_conditions/: conftest.py  test_dirichlet.py  test_dirichlet.yaml  test_neumann.py  test_neumann.yaml
tests/pylith.pkg/data_writers/: conftest.py  test_hdf5.py  test_hdf5.yaml  test_vtk.py  test_vtk.yaml
tests/pylith.pkg/governing_eqns/: conftest.py  test_elasticity.py  test_elasticity.yaml
tests/pylith.pkg/initial_conditions/: conftest.py  test_domain.py  test_domain.yaml  test_patch.py  test_patch.yaml
tests/pylith.pkg/interior_interfaces/: conftest.py  test_fault_impulses.py  test_fault_impulses.yaml  test_fault_kinematic.py  test_fault_kinematic.yaml
tests/pylith.pkg/interior_interfaces/source_time_fns/: conftest.py  test_brune.py  test_kinsrc_brune.py  test_kinsrc_brune.yaml  test_kinsrc_constant_rate.py  test_ramp.py  (+8 more)
tests/pylith.pkg/materials/: test_isotropic_linear.py  test_isotropic_linear.yaml
tests/pylith.pkg/mesh_initializers/: conftest.py  test_convert.py  test_convert.yaml  test_parallel.py  test_parallel.yaml  test_serial.py  test_serial.yaml
tests/pylith.pkg/mesh_io/: conftest.py  test_ascii.py  test_ascii.yaml  test_cubit.py  test_cubit.yaml  test_petsc.py  test_petsc.yaml
tests/pylith.pkg/metadata/: conftest.py  test_simulation_metadata.py  test_simulation_metadata.yaml
tests/pylith.pkg/monitors/: conftest.py  test_progress_monitor_step.py  test_progress_monitor_step.yaml  test_progress_monitor_time.py  test_progress_monitor_time.yaml
tests/pylith.pkg/observers/: conftest.py  test_solution_boundary.py  test_solution_boundary.yaml  test_solution_domain.py  test_solution_domain.yaml  test_solution_points.py  test_solution_points.yaml
tests/pylith.pkg/problems/: conftest.py  test_greens_fns.py  test_greens_fns.yaml  test_time_dependent.py  test_time_dependent.yaml
tests/pylith.pkg/scales/: conftest.py  test_dynamic_elasticity.py  test_dynamic_elasticity.yaml  test_quasistatic_elasticity.py  test_quasistatic_elasticity.yaml  test_quasistatic_poroelasticity.py  test_quasistatic_poroelasticity.yaml
tests/pylith.pkg/solvers/: conftest.py  test_petsc.py  test_petsc_solver.py  test_petsc_solver.yaml
tests/spatialdata.pkg/coordinate_systems/: conftest.py  test_cartesian.py  test_cartesian.yaml  test_geographic.py  test_geographic.yaml  test_geographic_local.py  test_geographic_local.yaml
tests/spatialdata.pkg/points_io/: conftest.py  test_points_stream.py  test_points_stream.yaml
tests/spatialdata.pkg/spatial_databases/: conftest.py  test_analytic.py  test_analytic.yaml  test_composite.py  test_composite.yaml  test_gravity_field.py  test_gravity_field.yaml  test_simple.py  test_simple.yaml  test_simple_grid.py  test_simple_grid.yaml  test_uniform.py  test_uniform.yaml
tests/spatialdata.pkg/time_histories/: conftest.py  test_points.py  test_points.yaml
tests/tmp/: test_dict.py  test_dict.yaml
tests/tmp/test/: __init__.py
(+19 files in other folders)
