[egg_info]
tag_build =
tag_date = 0

[metadata]
name = pylith
version = 6.0.0dev
author = Brad Aagaard, Matthew Knepley, Charles Williams
author_email = baagaard@usgs.gov, knepley@buffalo.edu, c.williams@gns.cri.nz
description = Finite-element software for modeling crustal deformation with an emphasis on earthquake faulting.
license = MIT
url = https://geodynamics.org/resources/pylith

[options]
python_requires = >=3.8

packages = find:

scripts =
	bin/pylith

#include_package_data = True
zip_safe = False

#[options.package_data]

[options.packages.find]
where =
	packages
exclude =
	docs
	m4
	etc
	tests
